--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- Avatar (Right on Desktop) -->
             <div class="hero-visual order-1 lg:order-2">
                 <div class="avatar-container">
-                    <img src="images/profile.jpg" alt="Avatar" class="avatar-img w-full h-full object-cover rounded-full">
+                    <img src="images/22.jpg" alt="Avatar" class="avatar-img w-full h-full object-cover rounded-full">
                     <div class="tech-icons">
                         <div class="tech-icon pr">Pr</div>
                         <div class="tech-icon ae">Ae</div>
